--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ section {
 
 .navbar__menu .menu__link:hover {
     background: #333;
-    color: #fff;
+    color: rgb(15, 185, 0);
     transition: ease 0.3s all;
 }
 
@@ -195,7 +195,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
     background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.733) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section.your-active-class .landing__container::before {
@@ -207,6 +207,10 @@ section.your-active-class .landing__container::after {
     opacity: 1;
     animation: rotate 5s linear 0s infinite forwards reverse;
 }
+a.menu__link.your-active-class{
+    background-color:  rgb(15, 185, 0);
+}
+
 
 /* Section Active Styles Keyframe Animations */
 @keyframes rotate {
