Feat: Add auto hide to navBar function

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,3 +234,10 @@ a.menu__link.your-active-class{
 		           rotate(-360deg);
 	}
 }
+
+.scrolled-down{
+    transform:translateY(-100%); transition: all 0.3s ease-in-out;
+}
+  .scrolled-up{
+    transform:translateY(0); transition: all 0.3s ease-in-out;
+}
